--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "oox",
     "private": true,
-    "version": "0.3.0",
+    "version": "0.3.0-beta1",
     "description": "Graceful NodeJS distributed application solution",
     "keywords": [
         "http",
