fix async build bug

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
         "oox": "dist/bin/cli.js"
     },
     "scripts": {
-        "build": "node scripts/compile & node scripts/linking"
+        "build": "node scripts/compile && node scripts/linking"
     },
     "author": "lipingruan",
     "homepage": "https://github.com/lipingruan/oox",
