--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,9 @@
         "outDir": "dist",
         "declaration": true,
         "declarationDir": "dist/types",
-        "resolveJsonModule": true
+        "resolveJsonModule": true,
+        "paths": {
+            "oox": [ "./" ]
+        }
     }
 }
