--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "license": "MIT",
     "dependencies": {
         "@oox/module-socketio": "^0.0.1",
+        "@oox/module-ws": "../oox-module-ws/dist/",
         "chalk": "^4.1.0"
     },
     "devDependencies": {
