--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,9 +22,6 @@
         "outDir": "dist",
         "declaration": true,
         "declarationDir": "dist/types",
-        "resolveJsonModule": true,
-        "paths": {
-            "oox": [ "./" ]
-        }
+        "resolveJsonModule": true
     }
 }
