--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "oox",
     "private": true,
     "version": "0.3.0-beta13",
-    "description": "Graceful NodeJS distributed application solution",
+    "description": "OOX Service Engine",
     "keywords": [
         "http",
         "websocket",
